<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".module.LoginActivity">

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_image_aspect_ratio_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/app_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        app:errorIconDrawable="@null"
        app:layout_constraintTop_toBottomOf="@id/logo_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edit_text"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:errorIconDrawable="@null"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />

    <ProgressBar
        android:id="@+id/button_progress_bar"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@color/md_white_1000"
        app:layout_constraintTop_toTopOf="@id/login_button"
        app:layout_constraintBottom_toBottomOf="@id/login_button"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="@id/login_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingVertical="12dp"
        app:strokeColor="@color/plum"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
