<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".module.LoginActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/setup_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/please_enter_your_name"
        android:textColor="@color/md_grey_900"
        android:textAlignment="center"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/setup_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input_layout" />

    <ProgressBar
        android:id="@+id/button_progress_bar"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@color/md_white_1000"
        app:layout_constraintTop_toTopOf="@id/submit_button"
        app:layout_constraintBottom_toBottomOf="@id/submit_button"
        app:layout_constraintStart_toStartOf="@id/submit_button"
        app:layout_constraintEnd_toEndOf="@id/submit_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>
